objects/USA_Sales_Leaderboard__c.object
<CustomObject>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Check_Ins_Unique__c</fullName>
        <label>Check Ins Unique</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Distributor__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Email_Tree__c</fullName>
        <formula>Owner:User.Email &amp; &quot; -&gt; &quot; &amp; IF(ISBLANK(Owner:User.Manager.Email),&quot;&quot;, Owner:User.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Number_of_Check_Ins__c</fullName>
        <label>Number of Check Ins</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Objectives_Achieved__c</fullName>
        <label>Objectives Achieved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Premise__c</fullName>
        <label>Premise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Profile_Contacts__c</fullName>
        <label>Profile Contacts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Profile_POS__c</fullName>
        <label>Profile POS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Profile_Surveys__c</fullName>
        <label>Profile Surveys</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Target_Universe__c</fullName>
        <label>Target Universe</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Team__c</fullName>
        <formula>CONTAINS(USA_Email_Tree__c, $User.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_To_Dos_Completed__c</fullName>
        <label>To Dos Completed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Total_Objectives__c</fullName>
        <label>Total Objectives</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Leaderboard</label>
    <nameField>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Leaderboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>